--- a/project0ms.ipynb
+++ b/project0ms.ipynb
@@ -108,9 +108,10 @@
     }
    ],
    "source": [
-    "#nacteni dat\n",
+    "# nacteni dat\n",
     "data = pd.read_csv(\"dopravni_nehody.csv\")\n",
-    "data.info()\n"
+    "data.info()\n",
+    "# vyhazuje varoani u urcitych sloupcu, ty vsak nejsou dale nikde pouzivany"
    ]
   },
   {
