--- a/project0ms.ipynb
+++ b/project0ms.ipynb
@@ -111,7 +111,7 @@
     "# nacteni dat\n",
     "data = pd.read_csv(\"dopravni_nehody.csv\")\n",
     "data.info()\n",
-    "# vyhazuje varoani u urcitych sloupcu, ty vsak nejsou dale nikde pouzivany"
+    "# vyhazuje varovani u urcitych sloupcu, ty vsak nejsou dale nikde pouzivany"
    ]
   },
   {
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "#zjištění možných záznamů pro jeden sloupec (ukázka na stavu vozovky)\n",
+    "# zjištění možných záznamů pro jeden sloupec (ukázka na stavu vozovky)\n",
     "display(data['stav_vozovky'].unique())"
    ]
   },
@@ -165,7 +165,7 @@
     "prumer_nehod = rocni_nehody.mean()\n",
     "rocni_nehody.plot(kind='bar', label='Množství záznamů',color='b')\n",
     "\n",
-    "#plot grafu poctu nehod za jednotlive roky a jejich prumer\n",
+    "# plot grafu poctu nehod za jednotlive roky a jejich prumer\n",
     "plt.axhline(y=prumer_nehod, color = 'g', linestyle='--', label=f'Průměr: {prumer_nehod:.2f}')\n",
     "\n",
     "plt.title('Počet nehod v letech 2010-2023')\n",
@@ -193,7 +193,7 @@
     }
    ],
    "source": [
-    "#vypocet poklesu nehod v roce 2023 oproti prumeru\n",
+    "# vypocet poklesu nehod v roce 2023 oproti prumeru\n",
     "procentualni_pokles = ((prumer_nehod - rocni_nehody[2023]) / (prumer_nehod/100))\n",
     "display(procentualni_pokles) #19.84292981769604"
    ]
@@ -215,11 +215,10 @@
     }
    ],
    "source": [
+    "# plot grafu poctu nehod za jednotlive mesice ve vsech letech\n",
     "denvtydnu_nehoda = data['mesic'].value_counts().sort_index()\n",
     "\n",
     "denvtydnu_nehoda.plot(kind='bar', label='Množství záznamů', color='b')\n",
-    "\n",
-    "#plot grafu poctu nehod za jednotlive roky a jejich prumer\n",
     "\n",
     "plt.title('Počet nehod v jednotlivých měsících 2010-2023')\n",
     "plt.xlabel('Měsíc')\n",
@@ -351,7 +350,7 @@
     }
    ],
    "source": [
-    "# filtrace dat pro minuly rok\n",
+    "# filtrace dat pro minuly rok a kontrola nekterych parametru\n",
     "start_date = pd.to_datetime('2023-01-01')\n",
     "end_date = pd.to_datetime('2024-01-01')\n",
     "\n",
@@ -370,7 +369,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filtrovani sloupcu dat jenz budu pouzivat pro lepsi prehlednost\n",
+    "# redukce sloupcu pro lepsi prehlednoust, vytyceni co by mohlo mit zajimave vysledky\n",
     "data_filt = data23.loc[:, ['zuj', 'alkohol_vinik', 'stav_vozovky', 'mestska_cast', 'pohlavi', 'den_v_tydnu', 'zavineni', 'doba', 'vek','hodina', 'mesic']]"
    ]
   },
@@ -513,19 +512,18 @@
     }
    ],
    "source": [
+    "# podminka zavineni ridicem, spocitani pro graf, odstraneni deti do 15 let\n",
     "zavineni_auto = data[data['zavineni'] == 'řidičem motorového vozidla']\n",
     "pohlavi_counts = zavineni_auto['pohlavi'].value_counts().sort_index()\n",
     "pohlavi_counts = pohlavi_counts.loc[['muž', 'žena']]\n",
     "print(zavineni_auto.shape[0])\n",
     "\n",
-    "# Print the counts\n",
-    "print(pohlavi_counts)\n",
-    "\n",
     "pohlavi_counts.plot(kind='bar', label='Množství záznamů', color='b')\n",
     "\n",
     "plt.title(label='Pohlaví účastníků dopravních nehod zaviněných řidičem 2010-2023')\n",
     "plt.xlabel('Pohlaví')\n",
-    "plt.show\n"
+    "\n",
+    "plt.show"
    ]
   },
   {
@@ -550,7 +548,7 @@
     "# definice datových košů a jejich označení, filtrace dat na nehody zaviněné řidičem\n",
     "bins = [0, 18, 28, 38, 48, 58, 68, data['vek'].max()]\n",
     "labels = ['0-17', '18-27', '28-37', '38-47', '48-57', '58-67', '68+']\n",
-    "zavineni_auto_vek = data[data['zavineni'] == 'řidičem motorového vozidla'].copy()  # create a copy of the slice\n",
+    "zavineni_auto_vek = data[data['zavineni'] == 'řidičem motorového vozidla'].copy() # kopie aby se vekova_skupina nepridala do \"data\"\n",
     "\n",
     "# rozdělení dat do skupin\n",
     "zavineni_auto_vek.loc[:, 'vekova_skupina'] = pd.cut(zavineni_auto_vek['vek'], bins=bins, labels=labels)\n",
@@ -560,9 +558,8 @@
     "\n",
     "plt.title(label='Věk účastníků dopravních nehod 2010-2023')\n",
     "plt.xlabel('Věková skupina')\n",
-    "plt.show()\n",
     "\n",
-    "\n"
+    "plt.show()"
    ]
   },
   {
@@ -589,6 +586,8 @@
     }
    ],
    "source": [
+    "# pocty dopravnich nehod zpusobenych alkoholem v jednotlivych dnech\n",
+    "\n",
     "alkohol_data=data[data['alkohol_vinik'] == 'ano']\n",
     "denvtydnu_nehoda = alkohol_data['den_v_tydnu'].value_counts().sort_index()\n",
     "print(alkohol_data['datum'].max())\n",
@@ -610,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1243,11 +1242,13 @@
     }
    ],
    "source": [
+    "#vyobrazeni nehod zpusobenych naledim\n",
+    "\n",
     "mesice_nehoda = data['mesic'].value_counts().sort_index()\n",
     "naledi_data = data[data['stav_vozovky'].isin(['na vozovce je náledí, ujetý sníh - posypané', 'souvislá sněhová vrstva, rozbředlý sníh', 'náhlá změna stavu vozovky (námraza na mostu, místní náledí)', 'na vozovce je náledí, ujetý sníh - neposypané'])]\n",
     "denvtydnu_nehoda_naledi = naledi_data['mesic'].value_counts().sort_index()\n",
     "\n",
-    "denvtydnu_nehoda.plot(kind='bar', label='Veškeré nehody', color='b')\n",
+    "mesice_nehoda.plot(kind='bar', label='Veškeré nehody', color='b')\n",
     "denvtydnu_nehoda_naledi.plot(kind='bar', label='Nehody zaviněné náledím', color='r')\n",
     "\n",
     "plt.title('Počet nehod v jednotlivých měsících + zaviněné náledím, 2010-2023')\n",
@@ -1255,8 +1256,15 @@
     "plt.ylabel('Počet záznamů')\n",
     "plt.legend()\n",
     "\n",
-    "plt.show()\n",
-    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# získání záznamů nehod způsobené náledím v dubnu a květnu\n",
     "records = naledi_data.loc[(naledi_data['mesic'] == 6) | (naledi_data['mesic'] == 7)]\n",
     "display(records)\n",
